--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,9 @@ jobs:
           python-version: '3.11'
       - name: Install the dependencies
         run: |
-          python -m pip install -r requirements.txt
+          python -m pip install matplotlib
+	  python -m pip install numpy
+       	  python -m pip install pyvista
       - name: Build the JupyterLite site
         run: |
           cp README.md content
